--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "authentication microservice ",
   "main": "index.ts",
   "scripts": {
-    "build": "tsc && cpx \"src/utils/templates/**/*\" dist/src/utils/templates",
+    "build": "tsc && npx copyfiles -u 1 \"src/utils/templates/**/*\" dist/src/utils/templates",
     "start": "tsc && node dist/src/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -31,7 +31,6 @@
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.13",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
@@ -46,8 +45,8 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.57.0",
-    "nodemon": "^3.1.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
