--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
   },
